--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="gif-container">
             <img src="./question.jpg" alt="Вопрос">
         </div>
-        <h1>Ты будешь моей сладуськой?</h1>
+        <h1>Ты будешь моей валентинкой?</h1>
         <div class="buttons">
             <button id="yesBtn">Да</button>
             <button id="noBtn">Нет</button>
@@ -26,7 +26,7 @@
         
         <!-- Текст поверх фото -->
         <div class="message-box">
-            <h1>Ура! Я так и знал! ❤️</h1>
+            <h1>ЕХЕХЕ! Я так и знал! ❤️❤️‍🔥</h1>
             <button id="backBtn" class="secondary-btn">Я передумала...</button>
         </div>
 
